# camroll

./: README.md  camroll_dataviewer.html  camroll_demo.html  camroll_questions_collection.html  index.html  yfcc_users.json
camroll-agent/: pyproject.toml  requirements.txt  requirements_local.txt
camroll-agent/camroll_agent/: __init__.py  agent.py  build_memory.py  cli.py  index.py  prompts.py  schemas.py  store.py  tools.py  vector.py
camroll-agent/camroll_agent/llm/: __init__.py  base.py  gemini_client.py  local_client.py  openai_client.py
camroll-agent/examples/: quickstart.py  sample_conversation.json
data/: README.md  prep_release.py  validate_release.py
page/: dataviewer.html  demo.html  project_page.html
project_page/: dataviewer.html  demo.html  questions.html
yfcc_users/: u1.json  u10.json  u11.json  u12.json  u13.json  u14.json  u2.json  u3.json  u4.json  u5.json  u6.json  u7.json  u8.json  u9.json
